# py-bragerone

./: .arch  .env.example  .gitignore  .gitignore.save  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  README.rst  SECURITY.md  bragerone-dual.code-workspace  debug_test_failures.py  pyproject.toml  pyproject_old.toml  renovate.json
.devcontainer/: Dockerfile  README.md  devcontainer.json  post-create.sh  setup.sh
.github/: WORKFLOW_MIGRATION_GUIDE.md  copilot-instructions.md  dependabot.yml  renovate.json
.github/workflows/: ci.yml  codeql.yml  dependabot.yml  docs.yml  publish.yml  release.yml  security.yml
dev/: .buildinfo  README.html  api.html  changelog.html  genindex.html  index.html  new_models.html  objects.inv  param_store_metadata.html  py-modindex.html  pybragerone_integration_cheatsheet.html  pybragerone_integration_notes.html  search.html  searchindex.js
dev/.doctrees/: README.doctree  api.doctree  changelog.doctree  environment.pickle  index.doctree  new_models.doctree  param_store_metadata.doctree  pybragerone_integration_cheatsheet.doctree  pybragerone_integration_notes.doctree
dev/.doctrees/api/: api_reference.doctree  pydantic_models.doctree
dev/.doctrees/architecture/: operations.doctree  overview.doctree
dev/.doctrees/guides/: getting_started.doctree  quickstart.doctree  tests_guidelines.doctree  typing.doctree
dev/.doctrees/reference/: best_practices.doctree  core_components.doctree  ha_integration.doctree  param_store_metadata.doctree  parameter_format.doctree  paramstore_usage.doctree
dev/_modules/: index.html
dev/_modules/pybragerone/: cli.html  gateway.html  utils.html
dev/_modules/pybragerone/api/: client.html  endpoints.html  ws.html
dev/_modules/pybragerone/models/: catalog.html  events.html  menu.html  menu_manager.html  param.html  token.html
dev/_modules/pybragerone/models/api/: auth.html  common.html  modules.html  objects.html  system.html  user.html
dev/_sources/: README.rst.txt  api.rst.txt  index.rst.txt
dev/api/: api_reference.html  pydantic_models.html
dev/architecture/: operations.html  overview.html
dev/guides/: getting_started.html  quickstart.html  tests_guidelines.html  typing.html
dev/reference/: best_practices.html  core_components.html  ha_integration.html  param_store_metadata.html  parameter_format.html  paramstore_usage.html
docs/: README.rst  WORKFLOWS.md  api.rst  architecture_guide.rst  changelog.md  conf.py  getting_started.rst  index.rst  new_models.rst  param_store_metadata.rst  paramstore_usage.rst  pybragerone_integration_cheatsheet.rst  pybragerone_integration_notes.rst  pydantic_models.rst  quick_reference.rst  quickstart.rst
docs/api/: api_reference.rst  pydantic_models.rst
docs/architecture/: operations.rst  overview.rst
docs/guides/: getting_started.rst  quality.rst  quickstart.rst  tests_guidelines.rst  typing.rst
docs/reference/: best_practices.rst  core_components.rst  ha_integration.rst  param_store_metadata.rst  parameter_format.rst  paramstore_usage.rst
examples/: README.md  basic_login.py  paramstore_usage.py  read_parameters.py  realtime_updates.py
reports/: junit.xml
reports/perf/: baseline.json  latest.json  startup_latest.json
scripts/: QUICK_START.md  README.md  README_explore_api.md  README_live_testing.md  analyze_results.py  explore_api_structure.py  perf_bench.py  setup_host_env.sh  test_api_models.py  test_api_responses.py  test_live_menu.py
scripts/live_test_results/: live_test_results_module_0_HT  DasPell GL 37kW.json  module.menu-CKOLchCi.js  module.menu-formatted.js
scripts/tests/: test_param_store_flow.py
src/bragerone/: __init__.py  __main__.py  api.py  assets_bootstrap.py  assets_client.py  client.py  gateway.py  jsparse.py  labels.py  labels_cli.py  param_catalog.py  ws.py
src/pyBragerOne/: api.py
src/pybragerone/: __init__.py  __main__.py  api.py  assets_bootstrap.py  assets_client.py  cli.py  const.py  consts.py  errors.py  events.py  gateway.py  jsparse.py  labels.py  labels_cli.py  param_catalog.py  token_store.py  types.py  utils.py  ws.py
src/pybragerone/api/: __init__.py  client.py  constants.py  consts.py  endpoints.py  server.py  ws.py
src/pybragerone/cli-extras/: __init__.py  ha_blueprint.py  parsers.py
src/pybragerone/cli_extras/: __init__.py  parsers.py
src/pybragerone/homeassistant/: map_units.py
src/pybragerone/models/: __init__.py  api_model.py  assets_model.py  catalog.py  events.py  i18n.py  labels.py  menu.py  menu_manager.py  param.py  param_meta.py  param_resolver.py  param_store.py  token.py  types.py  units.py
src/pybragerone/models/api/: __init__.py  auth.py  common.py  modules.py  objects.py  system.py  user.py
src/pybragerone/parsers/: README.rst  __init__.py  index_resolver.py  js_extract.py  jsparse.py
tests/: conftest.py  test__frontend.sh  test__rest.sh  test__socketio.sh  test_api.py  test_api_auth.py  test_api_get_bytes_retry.py  test_api_response.py  test_app_bundle_labels.py  test_assets_client.py  test_catalog_index_recovery.py  test_catalog_permissions.py  test_computed_status_eval.py  test_gateway_prime_reconnect.py  test_i18n_parser.py  test_jsparse.py  test_labels.py  test_menu_integration.py  test_menu_manager.py  test_menu_models.py  test_module_model_tolerates_null_interface.py  test_param_map_parser.py  test_param_resolver_panels.py  test_param_store_i18n_integration.py  test_paramstore_language_override.py  test_parser_resilience.py  test_parser_strengths.py  test_parsers_index_resolver.py  test_parsers_js_extractor.py  test_permission.py  test_resolve_value_reactive.py  test_version.py  test_ws_self_heal.py
tests/fixtures/: ALARMS_S7-Ccye_zLx.js  HEATING_COP-Dv3tc4g1.js  P4_POMPA_CT-Duqb0Ams.js  PARAM_4-DeOtkgzB.js  parameterValue-CLa127CQ.js  parameters-CscKwIZR.js  units-DDcKYJaU.js
tests/parsers/: test_i18n.py  test_mappings.py  test_module_menu.py
