[build-system]
requires = ["hatchling>=1.27.0", "hatch-vcs>=0.4.0"]
build-backend = "hatchling.build"

[project]
name = "py-bragerone"
description = "Async client for BragerOne: REST + Socket.IO, EventBus, ParamStore (dual-mode), HA-ready"
readme = "README.rst"
authors = [{ name = "MarPi82", email = "marpi82.dev@google.com" }]
maintainers = [{ name = "MarPi82", email = "marpi82.dev@google.com" }]
license = "MIT"
requires-python = ">=3.13.2,<4"
keywords = [
  "home",
  "automation",
  "brager",
  "bragerone",
  "socket.io",
  "websocket",
  "httpx",
  "pydantic",
  "home-assistant",
]
dependencies = [
  "httpx>=0.25.0,<1.0.0",
  "python-socketio[asyncio_client]>=5.14.0,<6.0.0",
  "pydantic>=2.10.4,<3.0.0",
  "typing-extensions>=4.15.0,<5.0.0",
  "tree-sitter>=0.21.3",
  "tree-sitter-javascript>=0.21.1",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Home Automation",
  "Typing :: Typed",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/marpi82/py-bragerone"
Documentation = "https://marpi82.github.io/py-bragerone/latest/"
Repository = "https://github.com/marpi82/py-bragerone"
Issues = "https://github.com/marpi82/py-bragerone/issues"
Changelog = "https://github.com/marpi82/py-bragerone/blob/master/CHANGELOG.md"

[project.scripts]
pybragerone = "pybragerone.__main__:main"
pybragerone-cli = "pybragerone.cli:main"
pybragerone-parsers = "pybragerone.cli_extras.parsers:main"

[project.optional-dependencies]
cli = ["typer>=0.16.0", "rich>=12.6.0", "aiofiles>=24.1"]
keyring = ["keyring>=25.0.0"]


[tool.hatch.version]
source = "vcs"
tag-pattern = '^(?:v)?(?P<version>\d{4}(?:\.\d{1,2}(?:\.\d{1,2})?)?(?:(?:a|b|rc)\d+)?)$'
tag-format = "{version}"

[tool.hatch.build.targets.wheel]
packages = ["src/pybragerone"]
include = ["src/pybragerone/py.typed"]

[tool.hatch.build.targets.sdist]
include = [
  "src/pybragerone",
  "README.rst",
  "docs/guides/getting_started.rst",
  "LICENSE",
]

[dependency-groups]
dev = [
  "poethepoet>=0.37.0,<0.38.0",
  "ruff>=0.14.2,<0.15.0",
  "mypy[dmypy]>=1.18.1,<2.0.0",
  "pre-commit>=4.3.0,<5.0.0",
  "python-dotenv>=1.1.1,<2.0.0",
  "pip-audit>=2.4.0,<3.0.0",
  "bandit>=1.8.4,<2.0.0",
  "semgrep>=1.89",
  "keyring>=25.0.0,<26.0.0",
  "hatch>=1.12.0,<2.0.0",
]
test = [
  "pytest>=8.3.3,<9.0.0",
  "pytest-asyncio>=1.2.0,<2.0.0",
  "pytest-cov>=7.0.0,<8.0.0",
  "pytest-httpx>=0.35.0,<0.36.0",
  "packaging>=24.1,<26.0.0",
]
docs = [
  "sphinx>=8.0.2,<9.0.0",
  "furo>=2025.9.25,<2026.0.0",
  "myst-parser>=4.0.0,<5.0.0",
  "sphinx-autodoc-typehints>=3.2.0,<4.0.0",
  "sphinx-copybutton>=0.5.2,<0.6.0",
]

# ---------------- Ruff (formatter + linter) ----------------
[tool.ruff]
target-version = "py313"
line-length = 130
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "W", "I", "D", "UP", "RUF", "SIM", "B"] #, "ANN",]
#ignore = [
#  "D100", # Missing docstring in public module
#  "D104", # Missing docstring in public package
#  "D107", # Missing docstring in __init__
#]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
#"__init__.py" = ["E402"]
#"**/{tests,docs,tools}/*" = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

# ---------------- mypy (strict) ----------------
[tool.mypy]
python_version = "3.13"
files = ["src/pybragerone", "tests"]
strict = true
exclude = ["scripts/"]

# Additional strictness to match Pylance
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
warn_redundant_casts = true

plugins = ["pydantic.mypy"]

# Handle untyped third-party packages
[[tool.mypy.overrides]]
module = "socketio.*"
ignore_missing_imports = true

# ---------------- pytest ----------------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
# or with coverage:
# addopts = "-q --cov=pybragerone --cov-report=term-missing"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
  "slow: potentially slower tests (network)",
  "needs_internet: tests that require internet access",
]

[tool.coverage.run]
branch = true
source = ["src/pybragerone"]


# ---------------- POE tasks ----------------
# (optional) Poe tasks, if you use 'poe' locally
[tool.poe.tasks]
bootstrap = { cmd = "uv sync --group dev --group test --group docs --locked" }
# format/lint/typecheck
fmt = "ruff format"
lint = "ruff check . --fix"
fix = ["lint", "fmt"]
typecheck = "mypy"
all = ["fmt", "lint", "typecheck"]
# Security
bandit = { cmd = "bandit -r src -q" }
semgrep = { cmd = "semgrep --config p/ci --error ." }
pip-audit = { cmd = "pip-audit --skip-editable --progress-spinner off --ignore-vuln GHSA-4xh5-x5gv-qwph" }
security = ["bandit", "semgrep", "pip-audit"]
# Full validation (quality + security + tests)
validate = ["fmt", "lint", "typecheck", "security", "test"]
# Tests
test = { cmd = "pytest -q" }
cov = { cmd = "pytest -q --cov=pybragerone --cov-report=term-missing" }
# Build
build = { cmd = "hatch build" }
# Docs
docs-build = { shell = "export LC_ALL=C.utf8 2>/dev/null || export LC_ALL=C.UTF-8 2>/dev/null || true && uv run --group docs sphinx-build -b html docs docs/_build/html" }
docs-serve = { shell = "python -m http.server --directory docs/_build/html 8000" }
# Publication (local; CI have its own secrets)
publish-pypi = { cmd = "hatch publish" }
publish-testpypi = { cmd = "hatch publish --repo testpypi" }
